[gd_scene load_steps=7 format=3 uid="uid://2uwjl2a0l7yb"]

[ext_resource type="Script" path="res://Scripts/OverworldEnemy/OverworldEnemy.gd" id="1_xp0bi"]
[ext_resource type="Texture2D" uid="uid://p871kcr0eyx6" path="res://Graphics/SOUVUTU0.png" id="2_8biwv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n20t6"]
size = Vector2(8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kropi"]
atlas = ExtResource("2_8biwv")
region = Rect2(96, 56, 8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_4sbui"]
radius = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8p4kn"]
size = Vector2(9, 9)

[node name="OverworldEnemy" type="CharacterBody2D" groups=["AutonomousMove"]]
z_index = -10
y_sort_enabled = true
motion_mode = 1
script = ExtResource("1_xp0bi")

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n20t6")

[node name="EnemySprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_kropi")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
path_desired_distance = 0.75
target_desired_distance = 0.75
path_max_distance = 10.0
path_postprocessing = 1
radius = 8.0
neighbor_distance = 50.0
max_speed = 2.0

[node name="ChaseRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="ChaseRangeShape" type="CollisionShape2D" parent="ChaseRange"]
shape = SubResource("CircleShape2D_4sbui")

[node name="EncounterCollider" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="EncounterColliderShape" type="CollisionShape2D" parent="EncounterCollider"]
shape = SubResource("RectangleShape2D_8p4kn")

[connection signal="navigation_finished" from="NavAgent" to="." method="_on_nav_agent_navigation_finished"]
[connection signal="target_reached" from="NavAgent" to="." method="_on_nav_agent_target_reached"]
[connection signal="area_entered" from="ChaseRange" to="." method="_on_chase_range_area_entered"]
[connection signal="area_exited" from="ChaseRange" to="." method="_on_chase_range_area_exited"]
[connection signal="area_entered" from="EncounterCollider" to="." method="_on_encounter_collider_area_entered"]
